Update buildjdk.sh